--- a/02_ONT_sequencing_data_analysis/Untitled.ipynb
+++ b/02_ONT_sequencing_data_analysis/Untitled.ipynb
@@ -3,16 +3,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1130a05",
+   "id": "972e28b1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "conda activate genetic_analysis"
+    "# conda activate genetic_analysis"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ee07ae1d",
+   "id": "a81d9744",
    "metadata": {},
    "source": [
     "lets look at the first 4 lines of the fastq in the `data` directory:"
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecb8583f",
+   "id": "fd745a0f",
    "metadata": {
     "scrolled": false
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abfce768",
+   "id": "87619b21",
    "metadata": {},
    "source": [
     "Now lets make this look like a bioinformatics working directory.  \n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d95b0e77",
+   "id": "4cbeccaa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ed0abb8",
+   "id": "0eb50acc",
    "metadata": {},
    "source": [
     "Now we need to populate that with a `qc` (quality control) directory and a `kraken2` (taxonomic assignment) directory:"
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f94a85df",
+   "id": "186e464d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "330803ec",
+   "id": "9a44e408",
    "metadata": {},
    "source": [
     "Nice that we can do that in a one-liner isn't it?  \n",
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "346d6101",
+   "id": "9c3311f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98de6215",
+   "id": "a368bba3",
    "metadata": {},
    "source": [
     "OK, lets qc the fastq using `fastp`:"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae1d6872",
+   "id": "023d349d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "890eeaaf",
+   "id": "5f81f58f",
    "metadata": {},
    "source": [
     "Shall we see what that did, `seqkit` to the rescue:"
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bced58f",
+   "id": "69df4f30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3986def",
+   "id": "6ff24789",
    "metadata": {},
    "source": [
     "Right, FUCK IT. Unleash the Kraken 2:"
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91d827ee",
+   "id": "49e2608e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94fedafc",
+   "id": "f9dde305",
    "metadata": {},
    "source": [
     "Make it more human-readable with a custom python script located in the `scripts` directory:"
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39c7bc07",
+   "id": "4e9d13da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aaa23e66",
+   "id": "d80b3a9d",
    "metadata": {},
    "outputs": [],
    "source": []
