--- a/01_introduction_to_unix_command_line/intro_to_unix_command_line.ipynb
+++ b/01_introduction_to_unix_command_line/intro_to_unix_command_line.ipynb
@@ -19,7 +19,7 @@
    "id": "6954f6a5",
    "metadata": {},
    "source": [
-    "![terminal](images/terminal.jpg)"
+    "![terminal](./images/terminal.jpg)"
    ]
   },
   {
