--- a/02_ONT_sequencing_data_analysis/ONT_sequencing_data_analysis.ipynb
+++ b/02_ONT_sequencing_data_analysis/ONT_sequencing_data_analysis.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "119502cc",
+   "metadata": {},
+   "source": [
+    "![image](./images/analysis.jpg)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ab4373fc",
