--- a/03_R_analysis/R_analysis.ipynb
+++ b/03_R_analysis/R_analysis.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "5d7a3d64",
+   "metadata": {},
+   "source": [
+    "![image](./images/terminal.jpg)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "957d3bb5",
@@ -9,14 +17,6 @@
    "source": [
     "library(iNEXT)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39c7b1fc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
