--- a/03_R_analysis/R_analysis.ipynb
+++ b/03_R_analysis/R_analysis.ipynb
@@ -5,7 +5,7 @@
    "id": "5d7a3d64",
    "metadata": {},
    "source": [
-    "![image](./images/terminal.jpg)"
+    "![image](./images/R.jpg)"
    ]
   },
   {
