--- a/02_ONT_sequencing_data_analysis/ONT_sequencing_data_analysis.ipynb
+++ b/02_ONT_sequencing_data_analysis/ONT_sequencing_data_analysis.ipynb
@@ -1,6 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf7c86ab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5058ac5b",
+   "metadata": {},
+   "source": [
+    "<hr>\n",
+    "\n",
+    "# <font color='Purple'>GENTEIC ANALYSIS: ONT SEQUENCING DATA ANALYSIS</font>\n",
+    "\n",
+    "<hr>\n",
+    "    \n",
+    "Dr Graham S Sellers *g.sellers@hull.ac.uk*"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "119502cc",
    "metadata": {},
