--- a/03_R_analysis/R_analysis.ipynb
+++ b/03_R_analysis/R_analysis.ipynb
@@ -2,6 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "73ed48ba",
+   "metadata": {},
+   "source": [
+    "<hr>\n",
+    "\n",
+    "# <font color='Purple'>GENTEIC ANALYSIS: R ANALYSIS</font>\n",
+    "\n",
+    "<hr>\n",
+    "    \n",
+    "Dr Graham S Sellers *g.sellers@hull.ac.uk*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5d7a3d64",
    "metadata": {},
    "source": [
@@ -17,14 +31,6 @@
    "source": [
     "library(iNEXT)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "931dc1c8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
